# mailprep

./: .build.yml  .coveragerc  .editorconfig  CHANGELOG.md  LICENSE-APACHE  LICENSE-MIT  MANIFEST.in  README.md  TODO.md  dev-requirements.txt  pyproject.toml  requirements.txt  setup.py  tox.ini
.builds/: alpine-edge.yml  debian-stretch.yml
mailprep/: __init__.py  __main__.py  cli.py
tests/: conftest.py  test_10_render.py  test_90_hitl.py
tests/data/: README.md  example_wikipedia.vcf
